Contrast fix

--- a/newDark.css
+++ b/newDark.css
@@ -8,5 +8,5 @@
     border: none;
 }
 .card{
-    background-color: #1d282e !important;
+    background-color: #131b1f !important;
 }
